--- a/Front-CoreUI/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -1,12 +1,9 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/pro/angular/" target="_blank">CoreUI</a>
-    <span> &copy; 2023 creativeLabs</span>
+    <span>Easy Request  &copy; 2023 </span>
   </div>
   <div class="ms-auto">
     Powered by
-    <a href="https://coreui.io/pro/angular" target="_blank">
-      <span> CoreUI for Angular</span>
-    </a>
+    <span> UY1 | FS | ICT4D</span>
   </div>
 <!--</c-footer>-->
