--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -1,106 +1,93 @@
 <div class="row">
-    <div class="col-12">
-      <div class="card">
-        <div class="card-header">
-          <h5>Ecrire votre Requête individuelle</h5>
-        </div>
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <h5>Ecrire votre Requête individuelle</h5>
+      </div>
+      <form action="add-individual-request" method="post" [formGroup]="requestForm" enctype="multipart/form-data" (ngSubmit)="sendRequest()">
         <div class="card-body">
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >UE</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Motif</label>
             <div class="col-sm-12 col-md-7">
-              <input type="text" class="form-control" />
-            </div>
-          </div>
-          <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Motif</label
-            >
-            <div class="col-sm-12 col-md-7">
-              <select class="form-control selectric">
-                <option>Absence de notes</option>
-                <option>Erreur de note</option>
-                <option>autres</option>
+              <select class="form-control selectric" pInputText formControlName="requestPatternId" id="requestPatternId"
+                      name="requestPatternId">
+                <option value="1">Absence de notes</option>
+                <option value="2">Erreur de note</option>
+                <option value="3">Autres</option>
               </select>
+              <div *ngIf="requestPatternId.invalid && requestPatternId.touched" class="text-danger">
+                <div *ngIf="requestPatternId.errors?.['required']">Motif est requis</div>
+              </div>
             </div>
           </div>
-          <br />
+          <br/>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Intitulé</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Intitulé</label>
             <div class="col-sm-12 col-md-7">
-              <input type="text" class="form-control" />
+              <input type="text" id="title" name="title" pInputText formControlName="title" class="form-control"/>
+              <div *ngIf="title.invalid && title.touched" class="text-danger">
+                <div *ngIf="title.errors?.['required']">Intitulé est requis</div>
+              </div>
             </div>
           </div>
-         <br>
+          <br>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Saisir le contenu de votre Requete</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Saisir le contenu de votre
+              Requete</label>
             <div class="col-sm-12 col-md-7">
-              <textarea class="summernote-simple"></textarea>
+              <textarea class="summernote-simple" id="content" pInputTextarea formControlName="content"></textarea>
+              <div *ngIf="content.invalid && content.touched" class="text-danger">
+                <div *ngIf="content.errors?.['required']">Contenu de la requête est requis</div>
+              </div>
             </div>
           </div>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Piece manuscrite</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Piece manuscrite</label>
             <div class="col-sm-12 col-md-7">
               <div id="image-preview" class="image-preview">
-                <label for="image-upload" id="image-label"
-                  >Choose File</label
-                >
-                <input type="file" name="image" id="image-upload" />
+                <label for="image-upload" id="image-label">Choose File</label>
+                <input type="file" name="fileHandWritten" formControlName="fileHandWritten" id="image-upload"/>
+              </div>
+              <div *ngIf="fileHandWritten.invalid && fileHandWritten.touched" class="text-danger">
+                <div *ngIf="fileHandWritten.errors?.['required']">Pièce manuscrite est requise</div>
               </div>
             </div>
           </div>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Pieces jointes</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
-                <input
-                  type="file"
-                  class="custom-file-input"
-                  id="customFile"
-                />
-                <label class="custom-file-label" for="customFile"
-                  >Choose file</label
-                >
+                <input type="file" class="custom-file-input" id="customFile" formControlName="fileAttachments"
+                       name="fileAttachments"/>
+                <label class="custom-file-label" for="customFile">Choose file</label>
+              </div>
+              <div *ngIf="fileAttachments.invalid && fileAttachments.touched" class="text-danger">
+                <div *ngIf="fileAttachments.errors?.['required']">Pièces jointes sont requises</div>
               </div>
             </div>
           </div>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-              >Destinataire</label
-            >
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Destinataire</label>
             <div class="col-sm-12 col-md-7">
-              <select class="form-control selectric">
-                <option>Mr Fomekong</option>
-                <option>Mr Moyou</option>
-                <option>Mr Aboubakar</option>
+              <select class="form-control selectric" name="receiver_id" formControlName="receiver_id" id="receiver_id">
+                <option value="1">Mr Fomekong</option>
+                <option value="1">Mr Moyou</option>
+                <option value="1"> Mr Aboubakar</option>
               </select>
+              <div *ngIf="receiver_id.invalid && receiver_id.touched" class="text-danger">
+                <div *ngIf="receiver_id.errors?.['required']">Destinataire est requis</div>
+              </div>
             </div>
           </div>
           <div class="form-group row mb-4">
-            <label
-              class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
-            ></label>
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
-              <button class="btn btn-primary">Soumettre</button>
+              <button type="submit" class="btn btn-primary">Soumettre</button>
             </div>
           </div>
         </div>
-      </div>
+      </form>
+
     </div>
   </div>
+</div>
