--- a/Front-CoreUI/src/app/views/pages/login/login.component.html
+++ b/Front-CoreUI/src/app/views/pages/login/login.component.html
@@ -9,11 +9,13 @@
 
               <form action="liste_requete3" method="post" [formGroup]="loginForm" (ngSubmit)="login()"
                     class="form-box">
-                <h3 class="h4 text-black mb-4">Connexion</h3>
+                <h3 class="h4 text-black mb-4 ">Se Connecter</h3>
 
-                <div class="form-group mt-3 d-flex flex-column">
+                <div class="form-group form-floating mt-3 d-flex flex-column">
                   <input type="email" pInputText formControlName="email" class="form-control custom-input"
-                         placeholder="Adresse email" id="email" name="email">
+                         placeholder="Adresse email" id="floatingInput" name="email" autocomplete="email">
+                  <label for="floatingInput">Email address</label>
+
 
                   <div *ngIf="email.invalid && email.touched" class="d-flex align-content-start text-danger">
                     <div *ngIf="email.errors?.['required']">Email is required</div>
@@ -21,9 +23,10 @@
                   </div>
                 </div>
 
-                <div class="form-group mt-3 d-flex flex-column">
-                  <input type="password" pInputText formControlName="password" class="form-control custom-input"
-                         placeholder="Mot de passe" id="password" name="password">
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="password" pInputText formControlName="password" class="form-control"
+                         placeholder="Mot de passe" id="floatingPassword" name="password">
+                  <label for="floatingPassword">Password</label>
 
                   <div *ngIf="password.invalid && password.touched" class="d-flex align-content-start text-danger">
                     <div *ngIf="password.errors?.['required']">Password is required</div>
