--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -51,8 +51,8 @@
             <div class="col-sm-12 col-md-7">
               <div id="image-preview" class="image-preview">
                 <label for="image-upload" id="image-label">Choose File</label>
-                <input type="file" (change)="onFileChange($event)" name="fileHandWritten"
-                       formControlName="fileHandWritten" id="image-upload"/>
+                <input type="file"  name="fileHandWritten"  (change)="onFileChange($event)"
+                       formControlName="fileHandWritten" accept=".png, .jpeg, .jpg, .pdf" id="image-upload"/>
               </div>
               <div *ngIf="fileHandWritten.invalid && fileHandWritten.touched" class="text-danger">
                 <div *ngIf="fileHandWritten.errors?.['required']">Pièce manuscrite est requise</div>
@@ -63,11 +63,17 @@
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
-                <input type="file" multiple (change)="onFileAttachmentsChange($event)" class="custom-file-input"
-                       id="customFile" formControlName="fileAttachments[]"
-                       name="fileAttachments[]"/>
-                <label class="custom-file-label" for="customFile">Choose file</label>
+                  <input aria-describedby="inputGroupFileAddon04"
+                         aria-label="Upload" multiple
+                         class="custom-file-input"
+                         cFormControl
+                         formControlName="fileAttachments[]" (change)="onFileAttachmentsChange($event)"
+                         id="inputGroupFile04"
+                         name="fileAttachments[]" accept=".png, .jpeg, .jpg, .pdf"
+                         type="file"/>
+                  <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
               </div>
+
               <div *ngIf="fileAttachments.invalid && fileAttachments.touched" class="text-danger">
                 <div *ngIf="fileAttachments.errors?.['required']">Pièces jointes sont requises</div>
               </div>
@@ -85,7 +91,6 @@
               </div>
             </div>
           </div>
-
           <div class="form-group row mb-4">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
