--- a/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
@@ -28,9 +28,9 @@
               <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
               <td>{{ request.created_at | date: 'dd/MM/yyyy' }}</td>
               <td>
-                <div [ngClass]="{'badge badge-success': request.statut === 'Validé', 'badge badge-danger': request.statut === 'Rejetée', 'badge badge-warning': request.statut === 'en_attente'}">
+                <div [ngClass]="{'btn btn-success': request.statut === 'Validé', 'btn btn-danger': request.statut === 'Rejetée', 'btn btn-warning': request.statut === 'en_attente'}">
                   {{ request.statut }}
-                </div>
+                </div>                        
               </td>
               <td>
                 <a [routerLink]="['/voir_requete', request.id]" class="btn btn-primary" style="font-size: 12px;">
