--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-12">
     <div class="card">
@@ -21,7 +20,6 @@
                 <div *ngIf="requestPatternId.errors?.['required']">Motif est requis</div>
               </div>
             </div>
-
           </div>
           <br/>
           <div class="form-group row mb-4">
@@ -37,7 +35,7 @@
           <br>
           <div class="form-group row mb-4">
             <label class="col-form-label  text-md-right col-12 col-md-3 col-lg-3">commentaire
-             de la Requete</label>
+              de la Requete</label>
             <div class="col-sm-12 col-md-7">
               <textarea class="summernote-simple  form-control" id="content" pInputTextarea formControlName="content"
                         placeholder="Saisissez le contenu de votre requête" rows="8" cols="75"></textarea>
@@ -48,31 +46,29 @@
           </div>
 
           <div class="form-group row mb-4">
-            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Piece manuscrite</label>
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" for="formFile" cLabel>Piece
+              manuscrite</label>
             <div class="col-sm-12 col-md-7">
-              <div id="image-preview" class="image-preview">
-                <label for="image-upload" id="image-label">Choose File</label>
-                <input type="file"  name="fileHandWritten"  (change)="onFileChange($event)"
-                       formControlName="fileHandWritten" accept=".png, .jpeg, .jpg, .pdf" id="image-upload"/>
+              <div class="custom-file">
+
+                <input cFormControl id="formFile" (change)="onFileChange($event)" type="file" accept=".png, .jpeg, .jpg, .pdf"
+                       formControlName="fileHandWritten" name="fileHandWritten"/>
               </div>
               <div *ngIf="fileHandWritten.invalid && fileHandWritten.touched" class="text-danger">
                 <div *ngIf="fileHandWritten.errors?.['required']">Pièce manuscrite est requise</div>
               </div>
             </div>
           </div>
+
+
           <div class="form-group row mb-4">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
-                  <input aria-describedby="inputGroupFileAddon04"
-                         aria-label="Upload" multiple
-                         class="custom-file-input"
-                         cFormControl
-                         formControlName="fileAttachments[]" (change)="onFileAttachmentsChange($event)"
-                         id="inputGroupFile04"
-                         name="fileAttachments[]" accept=".png, .jpeg, .jpg, .pdf"
-                         type="file"/>
-                  <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+               <input cFormControl id="formFileMultiple" (change)="onFileAttachmentsChange($event)" formControlName="fileAttachments[]" multiple type="file"
+                       name="fileAttachments[]"
+                       accept=".png, .jpeg, .jpg, .pdf"/>
+
               </div>
 
               <div *ngIf="fileAttachments.invalid && fileAttachments.touched" class="text-danger">
@@ -80,6 +76,8 @@
               </div>
             </div>
           </div>
+
+
           <div class="form-group row mb-4">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Destinataire</label>
             <div class="col-sm-12 col-md-7">
@@ -92,16 +90,16 @@
               </div>
             </div>
           </div>
-          <div  *ngIf="afficherAlerte" class="alert alert-primary">
+          <div *ngIf="afficherAlerte" class="alert alert-primary">
             Votre requête a éte soumis avec succes
-           </div>   
+          </div>
           <div class="form-group row mb-4">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
               <button type="submit" class="btn btn-primary" style="font-size: 12px;">Soumettre</button>
             </div>
-          </div>        
-         
+          </div>
+
         </div>
       </form>
 
