--- a/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -27,7 +27,7 @@
                     <td>{{ i + 1 }}</td>
                     <td>Individuelle</td>
                     <td>{{ request.title }}</td>
-                    <td>{{ request.content }}</td>
+                    <td>{{ request.content.substring(0 , 8) }} .....</td>
                     <td>{{ request.sender.matricule }}</td>
                     <td>{{ request.attachments.length }}</td>
                     <td>{{ request.created_at | dateFormat }}</td>
