--- a/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
@@ -6,7 +6,7 @@
           <h4 style="font-weight: bold;">Traiter la Requête</h4>
           <div class="invoice-number">#1</div>
         </div>
-        <hr />
+        <hr/>
         <div class="table-responsive">
           <table class="table table-striped table-hover table-md">
             <tr>
@@ -16,26 +16,26 @@
               <th>date de soumission</th>
             </tr>
             <tr>
-              <td>{{userData?.nom}}</td>
-              <td>{{userData?.matricule}}</td>
+              <td>{{ userData?.nom }}</td>
+              <td>{{ userData?.matricule }}</td>
               <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
               <td>{{ request.created_at | dateFormat }}</td>
             </tr>
           </table>
         </div>
-        <br /><br />
+        <br/><br/>
         <div class="row">
           <div class="col-md-6">
             <address>
-              <strong>{{userData?.nom}}</strong><br />
-              {{userData?.matricule}},<br >
-              ICT4D<br />
+              <strong>{{ userData?.nom }}</strong><br/>
+              {{ userData?.matricule }},<br>
+              ICT4D<br/>
             </address>
           </div>
           <div class="col-md-6 text-md-right">
             <address>
-              <strong>Order Date:</strong><br />
-             Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br /><br />
+              <strong>Order Date:</strong><br/>
+              Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br/><br/>
             </address>
           </div>
         </div>
@@ -47,31 +47,34 @@
   </div>
   <div class="row mt-4">
     <div class="col-md-12">
-      <h6 style="font-weight: bold;">objet et commentaire de la requête</h6><br>
-      <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br> {{ request?.content }}</p>
+      <p class="section-lead"><span
+        style="font-weight: bold;">objet et commentaire de la requête :</span> {{ request?.content }}</p><br>
+      <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br></p>
       <div class="row mt-4">
         <div class="col-lg-8">
           <h6 style="font-weight: bold;">Pièces jointes</h6><br>
-          <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments" >
-            <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index" >
-              <button  type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
-                      title="Voir la piece jointe.">  
-              <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank" style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
-             </button>
+          <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
+            <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
+              <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
+                      title="Voir la piece jointe.">
+                <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank"
+                   style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
+              </button>
             </p>
           </ng-container>
-                 
+
 
           <ng-template #noAttachments>
             <p class="section-lead">Aucune pièce jointe disponible.</p>
           </ng-template>
         </div>
-      </div><br>
+      </div>
+      <br>
 
       <div class="float-lg-left mb-lg-0 mb-3">
-        <div  *ngIf="afficherAlerte" class="alert alert-success">
+        <div *ngIf="afficherAlerte" class="alert alert-success">
           Votre Traitement a éte effectué avec succes
-         </div>  
+        </div>
         <button class="btn btn-success" (click)="validateRequest()" style="font-size: 12px;">
           Valider
         </button>&nbsp;&nbsp;
@@ -86,4 +89,4 @@
     </div>
   </div>
 </div>
-<hr />
+<hr/>
