--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -72,7 +72,7 @@
 
 
           <div class="form-group row mb-3">
-            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes<span class="text-danger">*</span><</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
                 <input cFormControl id="formFileMultiple" (change)="onFileAttachmentsChange($event)"
